@@ -259,6 +259,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * Make "Did you mean" search feature more noticeable
 * (bug 16720) Transcluded Special:NewPages processes "/username="
 * Added "Advanced search" link to the search form
+* Special:Upload can now have a custom upload message instead of uploadtext by
+  passing "uploadmsg" parameter in the url
 
 === Bug fixes in 1.14 ===
 
